[gd_scene load_steps=3 format=3 uid="uid://dqxvk0o33w81s"]

[ext_resource type="Script" path="res://UI/add_player_ui/add_player_ui.gd" id="1_yk6o0"]
[ext_resource type="Theme" uid="uid://bed6prpoafpry" path="res://assets/theme.tres" id="2_3wxwr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yk6o0")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.494118, 0.164706, 0.337255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_3wxwr")
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_3wxwr")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_3wxwr")
placeholder_text = "Insert player name here"
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="AddPlayerButton" type="Button" parent="VBoxContainer/MarginContainer4"]
layout_mode = 2
theme = ExtResource("2_3wxwr")
text = "Add Player"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/AddPlayerButton" to="." method="_on_add_player_button_pressed"]
